--- a/BookEx/BookEx/templates/bookMng/book_delete.html
+++ b/BookEx/BookEx/templates/bookMng/book_delete.html
@@ -16,6 +16,7 @@ Book Deleted
 
 {% block content %}
 <h1 align="center"> Book Deleted Successfully</h1>
+<h1 align="center"> Done </h1>
 
 <table align="center" border="2"  width="400">
        <tr>
